Final commit, added hover fx on footer, fix hover on .box, added max-width, clean code, check overflow-y on aside scrollbar

--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ main {
 .box {
     text-align: center;
     width: calc(16.5% - 5px);
+    max-width: 200px;
     position: relative;
 }
 .box img {
@@ -157,6 +158,7 @@ img not accept ::after, had to create a dinamic square with a svg inside
 }
 .aside-playlist{
     margin-top: 1em;
+    overflow-y: auto;
 }
 .aside-bottom {
     margin: auto 1em 1em 1em;
@@ -304,6 +306,43 @@ footer h4 {
     width: 30%;
 }
 
+/* Hover functionalities.. code galore here... press "f" to pay respect */
+.foot-current p:hover,
+.foot-current i:hover,
+.player-btn i:hover,
+.foot-setting i:hover{
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+}
+.foot-current p:hover {
+    text-decoration: underline;
+}
+#progress-bar:before,
+#audio-bar:before {
+    display: none;
+    position: absolute;
+    content: "";
+    height: 10px;
+    width: 10px;
+    background-color: white;
+    border-radius: 50%;
+    top: -6.5px;
+    left: 19%;
+    z-index: 15;
+}
+#progress-bar:hover:after {
+    border-color: greenyellow;
+}
+#progress-bar:hover:before,
+#audio-bar:hover:before{
+    display: inline-block;
+}
+#progress-bar:hover,
+#audio-bar:hover {
+    cursor: pointer;
+}
+
 
 /* UTILITY CLASSES */
 
@@ -334,7 +373,7 @@ footer h4 {
 
 
 /* MEDIA QUERIES */
-
+/* principal breakpoint */
 @media only screen and (max-width: 1024px){
     /* box-resizing */
     .aside-navbar {
@@ -439,7 +478,11 @@ footer h4 {
         display: block;
     }
 }
-
+/* height bp for call btn disappearance */
+@media only screen and (max-height:200px){
+    .fixed-upper {
+        display: none;
+    }
+}
 /* TEMPORARY WORKING AREA */
-
 
